--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: nautilus
 description: Nautilus是阿里百川电商SDK在Flutter上的实现，通过Nautilus可以实现淘宝登录，打开淘宝商品详情等功能。
 version: 0.0.1
-author:
-homepage:
+author: JarvanMo
+homepage: https://github.com/OpenFlutter/nautilus
 
 environment:
   sdk: ">=2.0.0-dev.68.0 <3.0.0"
