more user information provided

--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -43,6 +43,10 @@ android {
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        ndk {
+            abiFilters 'armeabi-v7a','x86_64','x86'
+        }
     }
     signingConfigs {
         debug {
